# haskell-fisque

./: .gitignore  CHANGELOG.md  README.md  cabal.project  fisque.cabal
examples/: console-producer.hs
src/Fisque/: Producer.hs
